# QuantaMind

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETE_GUIDE.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  package.json  pnpm-lock.yaml  vite.config.ts
backend/: Cargo.toml  Info.plist  build.rs  macos.entitlements  tauri.conf.json  tauri.linux.ci.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: errors.rs  errors_tests.rs  lib.rs  main.rs  sync.rs  time_iso.rs
backend/src/commands/: app_lifecycle.rs  compare.rs  compare_export.rs  compare_payloads.rs  compare_sink.rs  emit.rs  feasibility.rs  feedback.rs  feedback_tests.rs  gguf_cmd.rs  hardware.rs  health.rs  hf_browse.rs  hf_install.rs  hf_phase.rs  history.rs  mod.rs  model_settings.rs  models.rs  models_pull.rs  ollama_runtime.rs  ollama_start.rs  ollama_start_tests.rs  prompt.rs  prompt_handler.rs  prompt_options.rs  prompt_payloads.rs  prompt_run.rs  pull_events.rs  settings.rs  storage.rs  storage_disk.rs  storage_types.rs  verify_install.rs  workspace.rs  workspace_prompts.rs
backend/src/commands/audio/: capture.rs  mod.rs
backend/src/commands/bench/: bench_config.rs  mod.rs
backend/src/commands/compare/: compare.rs  compare_export.rs  compare_options.rs  compare_options_tests.rs  compare_payloads.rs  compare_sink.rs  compare_tests.rs  mod.rs
backend/src/commands/eval/: batch_cmd.rs  batch_payloads.rs  eval_registry.rs  eval_run.rs  evals_load.rs  evals_load_tests.rs  matrix_cmd.rs  mod.rs  readiness_cmd.rs  toolcall_cmd.rs  vision_cmd.rs
backend/src/commands/gguf/: gguf_cmd.rs  gguf_cmd_tests.rs  mod.rs  verify_install.rs  verify_install_tests.rs
backend/src/commands/hf/: hf_browse.rs  hf_card.rs  hf_install.rs  hf_install_tests.rs  hf_phase.rs  mod.rs
backend/src/commands/llama/: llama_discover.rs  llama_models.rs  llama_models_tests.rs  llama_runtime.rs  llama_runtime_tests.rs  llama_server_types.rs  llama_start.rs  llama_start_tests.rs  llama_templates.rs  llama_templates_tests.rs  mod.rs
backend/src/inference/: backend.rs  backend_kind.rs  chat_template_data.rs  chat_templates.rs  compare_run_row.rs  compare_runner.rs  compare_runner_finalize.rs  compare_sink.rs  consume_create.rs  create_body.rs  create_spec.rs  generate_spec.rs  gguf.rs  gguf_reader.rs  gguf_value.rs  hf_browse.rs  hf_download.rs  hf_request.rs  http.rs  mod.rs  modelfile.rs  ollama.rs  ollama_backend.rs  ollama_blob.rs  ollama_create.rs  pull.rs  pull_progress.rs  pull_speed.rs  token_handler.rs  vram_math.rs
backend/src/metrics/: mod.rs  throughput.rs  timeline.rs  timing.rs
backend/src/persistence/: batch_report_store.rs  batch_report_store_tests.rs  eval_history.rs  eval_history_tests.rs  eval_trace_store.rs  eval_trace_store_tests.rs  evals.rs  evals_tests.rs  files.rs  mod.rs  model_settings.rs  prompts.rs  readiness_profiles.rs  readiness_profiles_tests.rs  user_settings.rs  user_settings_tests.rs  workspaces.rs  workspaces_tests.rs
backend/src/validation/: mod.rs
backend/tests/: chat_templates.rs  compare_export.rs  compare_parallel.rs  compare_payloads.rs  compare_sequential.rs  create_body.rs  eval_run.rs  feasibility.rs  gguf.rs  gguf_file.rs  gguf_security.rs  health.rs  hf_browse.rs  hf_card.rs  hf_download_resume.rs  hf_repo_files.rs  hf_snapshot.rs  history_lifecycle.rs  huggingface.rs  huggingface_errors.rs  install_local_gguf_verify.rs  install_orchestration.rs  layering_guard.rs  llama_backend.rs  llama_discover.rs  llama_stream.rs  loaded_models.rs  mlx_stream.rs  mlx_stream_robustness.rs  modelfile.rs  models_list.rs  models_timeout.rs  ollama_backend.rs  ollama_blob.rs  ollama_create.rs  ollama_options.rs  ollama_stream.rs  phase7_acceptance.rs  phase7_live_backends.rs  prompt_emit_failure.rs  (+10 more)
backend/tests/common/: mod.rs
docs/: auto-rerun.md  (+40 more)
(+1137 files in other folders)
