[package]
name = "splice"
version = "0.1.0"
description = "Splice — local LLM workspace"
authors = ["splice-dev"]
edition = "2021"

[lib]
name = "splice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
sysinfo = { version = "0.32", default-features = false, features = ["disk", "system"] }
sha2 = "0.10"
bytes = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
